--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Whatsapp API by Ngekoding</title>
+	<title>Whatsapp API by Ladokutu</title>
 </head>
 <body>
 
